Changes to user lists confirmation screens

--- a/app/views/mvp1/organisation-confirmation-prap.html
+++ b/app/views/mvp1/organisation-confirmation-prap.html
@@ -21,7 +21,7 @@
 
     <p><a href="user-add-user-prap-new" class="govuk-link">Add a user to {{ data['organisation-name'] }}</a><br>
     
-    <p><a href="dashboard-service-prap" class="govuk-link">Go to the dashboard</a></p>
+    <p><a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a></p>
   </div>
 </div>
 {% endblock %}
