--- a/app/views/mvp1/user-confirmation-prap.html
+++ b/app/views/mvp1/user-confirmation-prap.html
@@ -26,7 +26,7 @@
       <p>An invitation has been sent to {{data['user-email-address']}}</p>
 
       <p>
-      <a href="dashboard-service-prap" class="govuk-link">Go to the dashboard</a></p>
+      <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a></p>
     </div>
   </div>
 {% endblock %}
