--- a/app/views/mvp1/user-list-prap-2.html
+++ b/app/views/mvp1/user-list-prap-2.html
@@ -16,9 +16,8 @@
   <table class="govuk-table">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
-          <th scope="col" class="govuk-table__header">Name</th>
-          <th scope="col" class="govuk-table__header">Organisation</th>
-          <th scope="col" class="govuk-table__header">Email</th>
+          <th scope="col" class="govuk-table__header govuk-!-width-one-half">Name</th>
+          <th scope="col" class="govuk-table__header govuk-!-width-one-third">Organisation</th>
           <th scope="col" class="govuk-table__header">Status</th>
       </tr>
     </thead>
@@ -27,21 +26,18 @@
         <tr class="govuk-table__row">
             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jon Newsome</a></th>
             <td class="govuk-table__cell">Capita</td>
-            <td class="govuk-table__cell">jon.newsome@capita.co.uk</td>
             <td class="govuk-table__cell">Suspended</td>
           </tr>
     
           <tr class="govuk-table__row">
             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Chris Whyte</a></th>
             <td class="govuk-table__cell">Capita</td>
-            <td class="govuk-table__cell">chris.whyte@capita.co.uk</td>
             <td class="govuk-table__cell">Pending activation</td>
           </tr>
     
           <tr class="govuk-table__row">
             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Chris Fairclough</a></th>
             <td class="govuk-table__cell">Capita</td>
-            <td class="govuk-table__cell">chris.fairclough@capita.co.uk</td>
             <td class="govuk-table__cell">Active</td>
           </tr>
 
@@ -49,49 +45,42 @@
           <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Matt Hayes</a></th>
               <td class="govuk-table__cell">G4S</td>
-              <td class="govuk-table__cell">matt.hayes@g4s.co.uk</td>
               <td class="govuk-table__cell">Suspended</td>
             </tr>
       
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Mick Brown</a></th>
               <td class="govuk-table__cell">G4S</td>
-              <td class="govuk-table__cell">mick.brown@g4s.co.uk</td>
               <td class="govuk-table__cell">Pending activation</td>
             </tr>
       
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">April Vokey</a></th>
               <td class="govuk-table__cell">G4S</td>
-              <td class="govuk-table__cell">april.vokey@g4s.co.uk</td>
               <td class="govuk-table__cell">Active</td>
             </tr>
       
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">John Wilson</a></th>
               <td class="govuk-table__cell">G4S</td>
-              <td class="govuk-table__cell">john.wilson@g4s.co.uk</td>
               <td class="govuk-table__cell">Active</td>
             </tr>
       
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Paul Young</a></th>
               <td class="govuk-table__cell">G4S</td>
-              <td class="govuk-table__cell">paul.young@g4s.co.uk</td>
               <td class="govuk-table__cell">Active</td>
             </tr>
       
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Marina Gibson</a></th>
               <td class="govuk-table__cell">G4S</td>
-              <td class="govuk-table__cell">marina.gibson@g4s.co.uk</td>
               <td class="govuk-table__cell">Suspended</td>
             </tr>
       
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jeremy Wade</a></th>
               <td class="govuk-table__cell">G4S</td>
-              <td class="govuk-table__cell">jeremy.wade@g4s.co.uk</td>
               <td class="govuk-table__cell">Active</td>
             </tr>
 
