--- a/app/views/mvp1/user-list-prap-3.html
+++ b/app/views/mvp1/user-list-prap-3.html
@@ -16,9 +16,8 @@
   <table class="govuk-table">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
-          <th scope="col" class="govuk-table__header">Name</th>
-          <th scope="col" class="govuk-table__header">Organisation</th>
-          <th scope="col" class="govuk-table__header">Email</th>
+          <th scope="col" class="govuk-table__header govuk-!-width-one-half">Name</th>
+          <th scope="col" class="govuk-table__header govuk-!-width-one-third">Organisation</th>
           <th scope="col" class="govuk-table__header">Status</th>
       </tr>
     </thead>
@@ -27,49 +26,42 @@
             <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Neville Fickling</a></th>
                     <td class="govuk-table__cell">G4S</td>
-                    <td class="govuk-table__cell">neville.fickling@g4s.co.uk</td>
                     <td class="govuk-table__cell">Active</td>
                   </tr>
             
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Bob Nudd</a></th>
                     <td class="govuk-table__cell">G4S</td>
-                    <td class="govuk-table__cell">bob.nudd@g4s.co.uk</td>
                     <td class="govuk-table__cell ">Active</td>
                   </tr>
             
                   <tr class="govuk-table__row">
                       <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Robert Church</a></th>
                       <td class="govuk-table__cell">G4S</td>
-                      <td class="govuk-table__cell">robert.church@g4s.co.uk</td>
                       <td class="govuk-table__cell ">Active</td>
                     </tr>
 
                     <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Bruce Sandison</a></th>
                             <td class="govuk-table__cell">G4S</td>
-                            <td class="govuk-table__cell">bruce.sandison@g4s.co.uk</td>
                             <td class="govuk-table__cell">Suspended</td>
                           </tr>
                     
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Rex Hunt</a></th>
                             <td class="govuk-table__cell">G4S</td>
-                            <td class="govuk-table__cell">rex.hunt@g4s.co.uk</td>
                             <td class="govuk-table__cell">Pending activation</td>
                           </tr>
                     
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Robson Green</a></th>
                             <td class="govuk-table__cell">G4S</td>
-                            <td class="govuk-table__cell">robson.green@g4s.co.uk</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
                     
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Dean Macey</a></th>
                             <td class="govuk-table__cell">G4S</td>
-                            <td class="govuk-table__cell">dean.macey@g4s.co.uk</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
                     
@@ -77,7 +69,6 @@
                           <tr class="govuk-table__row">
                                 <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Ali Hamidi</a></th>
                                 <td class="govuk-table__cell">G4S</td>
-                                <td class="govuk-table__cell">ali.hamidi@g4s.co.uk</td>
                                 <td class="govuk-table__cell">Active</td>
                               </tr>
 
@@ -85,14 +76,12 @@
            <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">John McKenzie</a></th>
           <td class="govuk-table__cell">London Borough of Croydon Council</td>
-          <td class="govuk-table__cell">j.mckenzie@croydon.gov.uk</td>
           <td class="govuk-table__cell">Suspended</td>
         </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Peter Ridsdale</a></th>
         <td class="govuk-table__cell">London Borough of Croydon Council</td>
-        <td class="govuk-table__cell">p.ridsdale@croydon.gov.uk</td>
         <td class="govuk-table__cell">Suspended</td>
       </tr>
 
@@ -127,7 +116,7 @@
           </li>
   
           <li class="pagination__item">
-              <a class="pagination__link" href="#" aria-label="Page 2">4</a>
+              <a class="pagination__link" href="user-list-prap-4" aria-label="Page 2">4</a>
             </li>
   
             <li class="pagination__item">
@@ -143,7 +132,7 @@
                   </li>
   
         <li class="pagination__item">
-          <a class="pagination__link" href="#" aria-label="Next page">
+          <a class="pagination__link" href="user-list-prap-4" aria-label="Next page">
             Next <span aria-hidden="true" role="presentation">&raquo;</span>
           </a>
         </li>
