--- a/app/views/mvp1/user-list-prap-new.html
+++ b/app/views/mvp1/user-list-prap-new.html
@@ -12,7 +12,7 @@
   <h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">{{ data['organisation-name'] }}</span> 
       Users</h1>
 
-  
+  <p>There no users in the organisation.</p>
 
   <a href="user-add-user-prap-new" class="govuk-button listing-page">Add user</a>
 
@@ -30,7 +30,7 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">{{ data['user-full-name'] }}</a></th>
         <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
-        <td class="govuk-table__cell">Active</td>
+        <td class="govuk-table__cell">Pending activation</td>
       </tr>
       {% endif %}
 
