--- a/app/views/mvp1/user-list-prap.html
+++ b/app/views/mvp1/user-list-prap.html
@@ -16,9 +16,8 @@
   <table class="govuk-table">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header">Name</th>
-        <th scope="col" class="govuk-table__header">Organisation</th>
-        <th scope="col" class="govuk-table__header">Email</th>
+        <th scope="col" class="govuk-table__header govuk-!-width-one-half">Name</th>
+        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Organisation</th>
         <th scope="col" class="govuk-table__header">Status</th>
       </tr>
     </thead>
@@ -28,50 +27,43 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">{{ data['user-full-name'] }}</a></th>
         <td class="govuk-table__cell">{{ data['user-organisation'] }}</td>
-        <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
-        <td class="govuk-table__cell">Active</td>
+        <td class="govuk-table__cell">Pending activation</td>
       </tr>
       {% endif %}
 
       <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">David Batty</a></th>
           <td class="govuk-table__cell">Capita</td>
-          <td class="govuk-table__cell">david.batty@capita.co.uk</td>
           <td class="govuk-table__cell">Suspended</td>
         </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Gary Speed</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">gary.speed@capita.co.uk</td>
         <td class="govuk-table__cell">Suspended</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Gordon Strachan</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">gordon.strachan@capita.co.uk</td>
         <td class="govuk-table__cell">Pending activation</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Gary McAllister</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">gary.mcallister@capita.co.uk</td>
         <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Tony Dorigo</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">tony.dorigo@capita.co.uk</td>
         <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Mel Sterland</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">mel.sterland@capita.co.uk</td>
         <td class="govuk-table__cell">Active</td>
       </tr>
 
@@ -80,28 +72,24 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Rod Wallace</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">rod.wallace@capita.co.uk</td>
         <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Lee Chapman</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">lee.chapman@capita.co.uk</td>
         <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Steve Hodge</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">steve.hodge@capita.co.uk</td>
         <td class="govuk-table__cell ">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">John Lukic</a></th>
           <td class="govuk-table__cell">Capita</td>
-          <td class="govuk-table__cell">john.lukic@capita.co.uk</td>
           <td class="govuk-table__cell ">Active</td>
         </tr>
     </tbody>
