Changes to org confirmation screen

--- a/app/views/mvp1/organisation-confirmation-prap.html
+++ b/app/views/mvp1/organisation-confirmation-prap.html
@@ -17,21 +17,11 @@
         }) }}
 
         <p>
-            <a href="user-add-user-prap-new" class="govuk-link">
-                Add a user to {{ data['organisation-name'] }}
-            </a><br>
-
-      html: data["organisation-name"]
-    }) }}
-
-    <p><a href="user-add-user-prap-new" class="govuk-link">Add a user to {{ data['organisation-name'] }}</a><br>
+            <a href="user-add-user-prap-new" class="govuk-link">Add a user to {{ data['organisation-name'] }}</a></p>
     
     <p><a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a></p>
   </div>
-            <a href="dashboard-service-prap" class="govuk-link">
-                Go to the dashboard
-            </a>
-        </p>
+            
     </div>
 </div>
 {% endblock %}
