Added Add DWP User to dashboard

--- a/app/views/mvp1/dashboard-service-prap.html
+++ b/app/views/mvp1/dashboard-service-prap.html
@@ -59,6 +59,10 @@
             </li>
 
             <li>
+                <a href="user-add-dwp-prap" class="govuk-link">Add a DWP user</a>
+            </li>
+
+            <li>
                 <a href="user-list-prap" class="govuk-link">View all users</a>
             </li>
         </ul>
