--- a/app/views/mvp1/user-confirmation-prap-new.html
+++ b/app/views/mvp1/user-confirmation-prap-new.html
@@ -24,6 +24,9 @@
       <p>An invitation has been sent to {{data['user-email-address']}}</p>
 
       <p>
+        <a href="#" class="govuk-link">Add another user</a></p>
+
+      <p>
       <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a></p>
     </div>
   </div>
