--- a/app/views/mvp1/user-list-prap.html
+++ b/app/views/mvp1/user-list-prap.html
@@ -16,7 +16,7 @@
   <table class="govuk-table">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header govuk-!-width-one-half">Name</th>
+        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
         <th scope="col" class="govuk-table__header govuk-!-width-one-third">Organisation</th>
         <th scope="col" class="govuk-table__header">Status</th>
       </tr>
