--- a/app/views/mvp1/user-confirmation-prap.html
+++ b/app/views/mvp1/user-confirmation-prap.html
@@ -26,6 +26,9 @@
       <p>An invitation has been sent to {{data['user-email-address']}}</p>
 
       <p>
+        <a href="#" class="govuk-link">Add another user to {{ data['organisation-name'] }}</a></p>
+
+      <p>
       <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a></p>
     </div>
   </div>
