--- a/app/views/mvp1/signin.html
+++ b/app/views/mvp1/signin.html
@@ -5,7 +5,19 @@
 {% endblock %}
 
 {% block header %}
-    {{super()}}
+    <header class="govuk-header" role="banner" data-module="govuk-header">
+        <div class="govuk-header__container govuk-width-container">
+            <div class="govuk-header__logo">
+                <a href="/" class="govuk-header__link govuk-header__link--homepage">
+                    <span class="govuk-header__logotype">
+                        <span class="govuk-header__logotype-text">
+                            {{serviceName}}
+                        </span>
+                    </span>
+                </a>
+            </div>
+        </div>
+    </header>
 {% endblock %}
 
 {% block content %}
