--- a/app/views/mvp1/user-view-old.html
+++ b/app/views/mvp1/user-view-old.html
@@ -8,10 +8,6 @@
     {{ super() }}
 {% endblock %}
 
-{% block beforeContent %}
-  {% include '../includes/back-button.njk' %}
-{% endblock %}
-
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
@@ -72,56 +68,14 @@
                 ]
             }) }}
 
-            <form id="form" method="post" action="reinvite-confirm">
-            
-            {{ govukRadios({
-                classes: "govuk-radios--small",
-                idPrefix: "user-task",
-                name: "user-task",
-                fieldset: {
-                  legend: {
-                    text: "Which task would you like to perform?",
-                    isPageHeading: true,
-                    classes: "govuk-fieldset__legend--m"
-                  }
-                },
-                items: [
-                  {
-                    value: "reinvite",
-                    text: "Resend invitation"
-                  },
-                  {
-                    value: "suspend",
-                    text: "Suspend the user"
-                  },
-                  {
-                    value: "delete",
-                    text: "Delete the user"
-                  }
-                ]
-              }) }}
+            <a href="#" class="govuk-button govuk-!-margin-right-1">Re-send invite</a>
+            <a href="#" class="govuk-button govuk-button--secondary govuk-!-margin-right-1">Suspend user</a>
 
-
-              <input type="submit" class="govuk-button govuk-!-margin-right-1" value="Continue" id="submit">
-
-
-            <a href="#" class="govuk-button govuk-button--secondary">Cancel</a>
-
-        </form>
+            <a href="#" class="govuk-button govuk-button--secondary">Delete user</a>
 
             <p class="govuk-!-margin-top-9">
                 <a href="user-list-prap" class="govuk-link">Back to users list</a>
             </p>
-
         </div>
     </div>
-
-
-    <script>
-        var nextPageRoutes = {
-          reinvite: 'reinvite-confirm.html',
-          suspend: 'suspend-check.html',
-          delete: 'delete-check.html',
-        }
-      </script>
 {% endblock %}
