--- a/app/views/mvp1/dashboard-service-prap.html
+++ b/app/views/mvp1/dashboard-service-prap.html
@@ -59,7 +59,7 @@
             </li>
 
             <li>
-                <a href="user-add-user-prap-dwp" class="govuk-link">Add a DWP user</a>
+                <a href="user-add-user-prap-dwp" class="govuk-link">Add an admin for this service</a>
             </li>
 
             <li>
