No orgs dashboard view

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -37,9 +37,16 @@
                 <li>
                     Fleshed out user list pages so that each sample organisation has their own list of users
                 </li>
+                <li>
+                    Added a 'no organisation' service admin dashboard view
+                </li>
+                <li>
+                    Added typeahead example to add new user journey
+                </li>
             </ul>
 
             <a href="/mvp1/signin" class="govuk-button">View MVP prototype</a>
+            <a href="/mvp1/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
         {% endset %}
 
         {% set previousVersionsHtml %}
