--- a/app/views/mvp1/suspend-confirm.html
+++ b/app/views/mvp1/suspend-confirm.html
@@ -33,7 +33,7 @@ Suspend user - {{serviceName}}
 
 
 
-      <p> David Batty has been suspended.</p>
+      <p>{{ data['user-full-name'] }} has been suspended.</p>
 
    
       <p><a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a></p>
