--- a/app/views/mvp1/user-view.html
+++ b/app/views/mvp1/user-view.html
@@ -75,7 +75,7 @@
             <form id="form" method="post" action="reinvite-confirm">
             
             {{ govukRadios({
-                classes: "govuk-radios--small",
+                classes: "govuk-radios",
                 idPrefix: "user-task",
                 name: "user-task",
                 fieldset: {
