--- a/app/views/mvp1/user-view.html
+++ b/app/views/mvp1/user-view.html
@@ -42,7 +42,7 @@
                             text: "Organisation"
                         },
                         value: {
-                            text: data['user-organisation']
+                            text: data['organisation-name']
                         }
                     },
                     {
@@ -105,12 +105,11 @@
               <input type="submit" class="govuk-button govuk-!-margin-right-1" value="Continue" id="submit">
 
 
-            <a href="#" class="govuk-button govuk-button--secondary">Cancel</a>
 
         </form>
 
             <p class="govuk-!-margin-top-9">
-                <a href="user-list-prap" class="govuk-link">Back to users list</a>
+                <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
             </p>
 
         </div>
