--- a/app/views/mvp1/user-add-user-prap-dwp.html
+++ b/app/views/mvp1/user-add-user-prap-dwp.html
@@ -15,7 +15,7 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form action="user-confirmation-prap" method="post" class="form">
+            <form action="user-admin-confirmation-prap" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
                         html: 'Add an admin for this service',
