Added hidden fields for org name to add user

--- a/app/views/mvp1/user-add-user-prap-croydon.html
+++ b/app/views/mvp1/user-add-user-prap-croydon.html
@@ -40,6 +40,8 @@
                     classes: "govuk-!-width-three-quarters"
                 }) }}
 
+                <input class="govuk-input" id="user-organisation" name="user-organisation" value="London Borough of Croydon Council" type="hidden" >
+
                 {{ govukButton({
                     text: "Continue"
                 }) }}
