--- a/app/views/mvp1/user-add-user-prap-capita.html
+++ b/app/views/mvp1/user-add-user-prap-capita.html
@@ -11,7 +11,7 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form action="user-confirmation-prap" method="post" class="form">
+            <form action="user-confirmation-prap?data=user-organisation:capita" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
                         html: '<h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">Capita</span> 
@@ -30,6 +30,8 @@
                     classes: "govuk-!-width-three-quarters"
                 }) }}
 
+
+
                 {{ govukInput({
                     label: {
                         text: "Email address"
@@ -39,6 +41,12 @@
                     type: "email",
                     classes: "govuk-!-width-three-quarters"
                 }) }}
+
+
+                
+
+                <input class="govuk-input" id="user-organisation" name="user-organisation" value="Capita" type="hidden" >
+
 
                 {{ govukButton({
                     text: "Continue"
