--- a/app/views/mvp1/user-list-prap.html
+++ b/app/views/mvp1/user-list-prap.html
@@ -31,7 +31,7 @@
       {% if data['user-full-name'] %}
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">{{ data['user-full-name'] }}</a></th>
-        <td class="govuk-table__cell">{{ data['organisation-name'] }}</td>
+        <td class="govuk-table__cell">{{ data['user-organisation'] }}</td>
         <td class="govuk-table__cell">Pending activation</td>
       </tr>
       {% endif %}
