Fixed org name data in table

--- a/app/views/mvp1/user-view.html
+++ b/app/views/mvp1/user-view.html
@@ -42,7 +42,7 @@
                             text: "Organisation"
                         },
                         value: {
-                            text: data['organisation-name']
+                            text: data['user-organisation']
                         }
                     },
                     {
