--- a/app/views/mvp1/user-list-prap-croydon.html
+++ b/app/views/mvp1/user-list-prap-croydon.html
@@ -31,7 +31,7 @@
     </thead>
 
     <tbody class="govuk-table__body">
-      {% if data['user-full-name'] %}
+      {% if data['user-organisation'] == 'London Borough of Croydon Council' %}
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">{{ data['user-full-name'] }}</a></th>
         <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
