Fixed serco data fields

--- a/app/views/mvp1/user-add-user-prap-serco.html
+++ b/app/views/mvp1/user-add-user-prap-serco.html
@@ -25,8 +25,8 @@
                     label: {
                         text: "Full name"
                     },
-                    id: "serco-user-full-name",
-                    name: "serco-user-full-name",
+                    id: "user-full-name",
+                    name: "user-full-name",
                     classes: "govuk-!-width-three-quarters"
                 }) }}
 
@@ -34,8 +34,8 @@
                     label: {
                         text: "Email address"
                     },
-                    id: "serco-user-email-address",
-                    name: "serco-user-email-address",
+                    id: "user-email-address",
+                    name: "user-email-address",
                     type: "email",
                     classes: "govuk-!-width-three-quarters"
                 }) }}
