--- a/app/views/mvp1/user-list-prap-serco.html
+++ b/app/views/mvp1/user-list-prap-serco.html
@@ -31,8 +31,8 @@
     <tbody class="govuk-table__body">
       {% if data['user-organisation'] == 'Serco' %}
       <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">{{ data['serco-user-full-name'] }}</a></th>
-        <td class="govuk-table__cell">{{ data['serco-user-email-address'] }}</td>
+        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">{{ data['user-full-name'] }}</a></th>
+        <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
         <td class="govuk-table__cell">Active</td>
       </tr>
       {% endif %}
