--- a/app/views/mvp1/user-add-user-prap-remploy.html
+++ b/app/views/mvp1/user-add-user-prap-remploy.html
@@ -8,6 +8,11 @@
     {{ super() }}
 {% endblock %}
 
+{% block beforeContent %}
+  {% include '../includes/back-button.njk' %}
+{% endblock %}
+
+
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
